Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -677,7 +677,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp = list[range()]"
+    "pp = list[range(0,16,2)]"
    ]
   },
   {
