Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -740,7 +740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "columns(rss_lines)"
+    "print(columns(rss_lines)"
    ]
   },
   {
